--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX # or UA-YYYYYYYYYYYYY
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=GTM-XXXXXXXXX
+NEXT_PUBLIC_GOOGLE_ADSENSE_ID=ca-pub-XXXXXXXXXXX
