--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --ext .js,jsx,.ts,.tsx --fix",
